# AVR-motor-driver

./: CMakeLists.txt  README.md
src/: adc_control.c  adc_control.h  main.c  motor_driver.c  motor_driver.h  uart_com.c  uart_com.h
